internal/generator/kcc/testdata/golden/skaffold-application-development/appdev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels:
    app.kubernetes.io/part-of: myapp
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: api-server
  namespace: api
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: api-server-binding
  namespace: api
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
subjects:
  - kind: ServiceAccount
    name: api-server
    namespace: api
